@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-27T12:35:39Z",
-  "count_outdated" : 7685,
-  "uniques_outdated" : 3340,
-  "count" : 7813,
-  "uniques" : 3431,
+  "timestamp" : "2024-05-28T01:21:07Z",
+  "count_outdated" : 7697,
+  "uniques_outdated" : 3350,
+  "count" : 7814,
+  "uniques" : 3432,
   "clones" : [
-    {
-      "timestamp": "2024-05-13T00:00:00Z",
-      "count": 12,
-      "count_minmax": [ 10, 12 ],
-      "count_decinc": [ 0, 12 ],
-      "uniques": 10,
-      "uniques_minmax": [ 8, 10 ],
-      "uniques_decinc": [ 0, 10 ]
-    },
     {
       "timestamp": "2024-05-14T00:00:00Z",
       "count": 2,
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2024-05-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
