@@ -1,12 +1,7 @@
 {
-  "count": 128,
-  "uniques": 66,
+  "count": 117,
+  "uniques": 59,
   "clones": [
-    {
-      "timestamp": "2024-05-13T00:00:00Z",
-      "count": 12,
-      "uniques": 10
-    },
     {
       "timestamp": "2024-05-14T00:00:00Z",
       "count": 2,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2024-05-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
